--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.group.hello_group_1_pract">
+    package="com.group.calculator">
 
     <application
         android:allowBackup="true"
@@ -8,13 +8,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
-        <activity android:name=".Activity2nd"
-            android:parentActivityName=".MainActivity"
-            android:noHistory = "true"
-            >
-
-        </activity>
+        android:theme="@style/Theme.Calculator">
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
